-- Fixed the alignment issue with the folder and wrench icons

--- a/src/css/menuView.css
+++ b/src/css/menuView.css
@@ -85,7 +85,7 @@ div.view {
 
 .wrenchDropdown {
     padding-left: 0;
-    padding-top: 5px;
+    /*padding-top: 5px;*/
 }
 
 .wrenchDropdown.dropdown-toggle::after {
@@ -234,6 +234,6 @@ li > label:hover {
 /*}*/
 
 #familyFolder {
-    width : 100% !important;
+    width : auto !important;
     height: auto !important;
 }
